--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" href="../static/css/semantic.min.css">
 <link rel="stylesheet" type="text/css" href="../static/css/main.css">
 <link rel="stylesheet" type="text/css" href="../static/css/jquery-ui.min.css">
+{% block css %}{% endblock %}
 </head>
 <body>
 <div class="main-header">
@@ -166,6 +167,7 @@
 <script src="../static/javascript/semantic.min.js"></script>
 <script src="../static/javascript/main.js"></script>
 <script src="../static/javascript/circuit.js"></script>
+{% block script %}{% endblock %}
 
 </body>
 </html>
