--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -6,11 +6,13 @@ body {
   font-family: Arial, '宋体';
   /*font-size: 14px;*/
 }
+
 #search-form-small{
 	position: relative;
-	width: 480px;
-    z-index:100
+	width: 100%;
+    z-index:100;
 }
+
 #search-form-small .database-check{
 	position: absolute;
 	top: 41px;
@@ -65,6 +67,11 @@ body {
 .sidebar .icon.remove:hover{
 	color: #F6292F;
 }
+
+.ui.action.input {
+    float:right;
+}
+
 #search-form-big{
 	margin-bottom: 10px;
 }
@@ -81,6 +88,11 @@ body {
 .ui.popup{
 	z-index: 1000;
 }
+
+.ui.active.right.very.wide.sidebar {
+    margin-left: -445px!important;
+}
+
 #search-window .result-table{
 	position: absolute;
 	top: 235px;
@@ -142,8 +154,8 @@ body {
     margin-bottom: 12px;
 }
 .main-header{
-	float: right;
-	margin-right: 20px;
+	float: left;
+	margin-left: 20px;
 }
 .link{
 	color: blue;
@@ -152,18 +164,18 @@ body {
 }
 .mini.ui.modal{
 	width: 36%;
-	margin-left: -18%;
+	margin-right: -18%;
 }
 .ui.modal .open-register{
 	position: absolute;
-	left: 32px;
+	right: 32px;
 	bottom: 15px;
 }
 .ui.button{
 	text-transform: capitalize;
 }
 #login-form-submit, #register-form-submit{
-	float: right;
+	float: left;
 	margin: 15px 32px;
 }
 .login-box .message, .register-box .message{
