--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -1,8 +1,20 @@
 {%extends "index.html"%}
 {%block partcss %}
+<link rel="stylesheet" type="text/css" href="../static/css/circuit.css">
 {%endblock partcss %}
 {%block part %}
-  circuit
+<div id="circuits">
+    <div class="ui tabular menu" id="cTitle"> 
+        <div class="mini ui button" id="addCircuit"><i class="big expand icon"></i></div>
+    </div>
+</div>
+<div id="template">
+<li class='item'><a></a><i class='close basic icon'></i></li>
+<div id="circuit">
+    <textarea>circuit</textarea>
+</div>
+</div>
 {%endblock %}
 {%block partscript %}
+<script src="../static/javascript/circuit.js"></script>
 {%endblock partscript %}
