--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -10,8 +10,66 @@
 </div>
 <div id="template">
     <li><a></a><span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
-    <div id="circuit">
-        <textarea>circuit</textarea>
+    <div id="circuit" class="ui column divided grid">
+        <div class="row">
+            <div class="two wide column">
+                <input type="checkbox"></input>
+                <div class="ui two column divided grid">
+                    <div class="row">
+                        <div class="column">
+                            input
+                            <img class="ui small image" src="../static/images/circuit/input.png">
+                        </div>
+                        <div class="column">true</div>
+                    </div>
+                    <div class="row">
+                        <div class="column">
+                            promoter
+                            <img class="ui small image" src="../static/images/circuit/promoter.png">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="column">
+                            receptors
+                            <img class="ui small image" src="../static/images/circuit/receptor.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="two wide column">
+                <input type="checkbox"></input>
+                <div class="ui two column divided grid">
+                    <div class="row">
+                        <div class="column">
+                            input
+                            <img class="ui small image" src="../static/images/circuit/input.png">
+                        </div>
+                        <div class="column">true</div>
+                    </div>
+                    <div class="row">
+                        <div class="column">
+                            promoter
+                            <img class="ui small image" src="../static/images/circuit/promoter.png">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="column">
+                            receptors
+                            <img class="ui small image" src="../static/images/circuit/receptor.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="two wide column">
+                <div class="row">
+                    <div class="column">
+                        output
+                        <img class="ui small image" src="../static/images/circuit/output.png">
+                    </div>
+                    <div class="column">true</div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {%endblock %}
