--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -9,6 +9,17 @@
     </ul>
 </div>
 <div id="template">
+    <div class="ui modal biobrickselector">
+        <i class="close icon"></i>
+        <div class="header">
+        </div>
+        <div class="content"> 
+        </div>
+        <div class="actions">
+            <div class="ui button">Cancel</div>
+            <div class="ui button">OK</div>
+        </div>
+    </div>
     <li><a></a><span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
     <div id="circuit" class="ui column divided grid">
         <div class="row">
@@ -71,6 +82,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 {%endblock %}
 {%block partscript %}
