--- a/server/templates/experiment.html
+++ b/server/templates/experiment.html
@@ -1,8 +1,84 @@
-{%extends "layout.html"%}
-{%block css %}
-{%endblock css %}
-{%block content %}
-  html for experiment
-{%endblock %}
-{%block script %}
-{%endblock script %}
+{% extends "layout.html"%}
+{% block title %}experiment{% endblock %}
+{% block css %}
+  <link rel="stylesheet" style="text/css" href="../static/css/experiment.css" />
+{% endblock css %}
+{% block content %}
+  <div id="experiment_header">
+    <div id="left_header">
+      <ul>
+        <li><span><a href="/">Design</a></span></li>
+        <li><span><a href="/simulation">Simulation</a></span></li>
+      </ul>
+    </div>
+    <div id="header_title">
+      <h1>Experiment</h1>
+    </div>
+    <div id="right_header">
+      {% include "basic_operations.html" %}
+    </div>
+  </div> <!-- end of experiment_header -->
+
+  <div id="experiment_main">
+    <div class="ui top attached tabular menu">
+      <a class="item">Experimental Procedure</a>
+      <a class="item active">Experimental Records</a>
+    </div>
+
+    <div id="experiment_content">
+      <div id="experimental_procedure">
+      </div> <!-- end of experimental_procedure -->
+      <div id="experimental_records"  class="ui bottom attached segment">
+        <div id="experimental_records_content">
+          <div id="records_header">
+            <div id="records_header_input">
+              <input type="text" placeholder="Heading" />
+            </div>
+            <div id="records_time">
+              <span></span>
+            </div>
+          </div>
+          <div id="records_content">
+            <table>
+              <tr>
+                <th>Components</th>
+                <th>Volume</th>
+                <th>Final Concentration</th>
+              </tr>
+              <tr class="records_input">
+                <td class="components_input">
+                  <div class="select_option_box">
+                    <select class="select_option">
+                      <option>常用试剂</option>
+                      <option>其他试剂</option>
+                    </select>
+                    <input class="other_option" type="text" placeholder="其他试剂" />
+                  </div>
+                  <div class="records_unit">
+                    <input type="text" placeholder="单位" />
+                  </div>
+                </td>
+                <td>
+                  <input type="text" />
+                </td>
+                <td>
+                  <input type="text" />
+                </td>
+              </tr>
+            </table>
+            <button type="button" id="records_add_item">+</button>
+          </div> <!-- end of records_content -->
+          <div id="records_note">
+            <textarea rows="8" cols="75" placeholder="note"></textarea>
+          </div>
+        </div> <!-- end of experimental_records_content -->
+      </div> <!-- end of experimental_records -->
+    </div> <!-- end of experiment_content -->
+    <div id="experiment_sub_menu" class="ui secondary pointing menu">
+      <a class="item active">+</a>
+    </div>
+  </div> <!-- end of experiment_main -->
+{% endblock %}
+{% block script %}
+  <script type="text/javascript" src="../static/javascript/experiment.js"></script>
+{% endblock %}
