--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -20,10 +20,25 @@
             <div class="ui button">OK</div>
         </div>
     </div>
-    <div class="ui slider checkbox truthele">
-        <input type="checkbox" name="walk"><label></label>
+    <div class="ui small modal frame">
+        <i class="close icon"></i>
+        <div class="header">
+            Design Frames
+        </div>
+        <ol class="content ui vertical menu"> 
+            <li class="ui-widget-content item">And</li>
+            <li class="ui-widget-content item">OR</li>
+            <li class="ui-widget-content item">NAND</li>
+        </ol>
+        <div class="actions">
+            <div class="ui button">Cancel</div>
+            <div class="ui button">Confirm</div>
+        </div>
     </div>
-    <div class="column ui two column divided grid part">
+    <div class="ui slider checkbox truthele" z-index="9999">
+        <input type="checkbox"><label></label>
+    </div>
+    <div class="ui two column divided grid part">
         <div class="row">
             <div class="column">
                 <img class="ui small image element" name="input" src="../static/images/circuit/input.png">
@@ -56,44 +71,25 @@
         </div>
     </div>
     <li><a></a><span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
-    <div id="circuit" class="ui column divided grid">
+    <div id="circuit" class="ui grid">
         <div class="row">
-            <div class="column">
+            <div class="five wide column">
                 <div class="ui column divided grid">
                     <div class="row parts"></div>
                 </div>
                 <div class="small ui button" name="addPart"><i class="big expand icon"></i></div>
             </div>
-            <!--div class="two wide column">
-                <input type="checkbox"></input>
-                <div class="ui two column divided grid">
-                    <div class="row">
-                        <div class="column">
-                            input
-                            <img class="ui small image part2" src="../static/images/circuit/input.png">
-                        </div>
-                        <div class="column">true</div>
-                    </div>
-                    <div class="row">
-                        <div class="column">
-                            promoter
-                            <img class="ui small image part2" src="../static/images/circuit/promoter.png">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="column">
-                            receptors
-                            <img class="ui small image part2" src="../static/images/circuit/receptor.png">
-                        </div>
-                    </div>
-                </div>
-            </div-->
-            <div class="column">
+            <div class="eight wide column">
                 <div class="ui column divided grid">
                     <div class="row outputs"></div>
                 </div>
+                
+            </div>
+            <div class="two wide column">
                 <div class="small ui button" name="addOutput"><i class="big expand icon"></i></div>
                 <div class="small ui button" name="addTruthTableRow"><i class="big expand icon"></i></div>
+                <div class="ui button" name="confirm">Confirm</div>
+                <div class="ui button" name="frame">Design Frame</div>
             </div>
         </div>
     </div>
