--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -9,6 +9,23 @@
     </ul>
 </div>
 <div id="template">
+    <div class="ui modal recommend">
+        <i class="close icon"></i>
+        <div class="header">
+            Recommend
+        </div>
+        <div class="ui grid" style="height:500px;width:100%;"> 
+            <div class="six wide column">
+                <canvas id="radar" style="height:100%;width:100%;">hello radar</canvas>
+            </div>
+            <div class="ten wide column">
+                content
+            </div>
+        </div>
+        <div class="actions">
+            <div class="ui button">Confirm</div>
+        </div>
+    </div>
     <div class="ui small modal biobrickselector">
         <i class="close icon"></i>
         <div class="header">
@@ -45,6 +62,7 @@
                 Input
             </div>
             <div class="column truthcolumn">
+                High-Low
             </div>
         </div>
         <div class="row">
@@ -67,6 +85,7 @@
                 Output
             </div>
             <div class="column truthcolumn">
+                High-Low
             </div>
         </div>
     </div>
@@ -83,12 +102,11 @@
                 <div class="ui column divided grid">
                     <div class="row outputs"></div>
                 </div>
-                
             </div>
             <div class="two wide column">
                 <div class="small ui button" name="addOutput"><i class="big expand icon"></i></div>
                 <div class="small ui button" name="addTruthTableRow"><i class="big expand icon"></i></div>
-                <div class="ui button" name="confirm">Confirm</div>
+                <div class="ui button" name="submit">Submit</div>
                 <div class="ui button" name="frame">Design Frame</div>
             </div>
         </div>
@@ -98,4 +116,5 @@
 {%endblock %}
 {%block partscript %}
 <script src="../static/javascript/circuit.js"></script>
+<script src="../static/javascript/Chart.min.js"></script>
 {%endblock partscript %}
