--- a/server/templates/experiment.html
+++ b/server/templates/experiment.html
@@ -69,6 +69,7 @@
             <textarea rows="8" cols="75" placeholder="note"></textarea>
           </div>
         </div> <!-- end of experimental_records_content -->
+        <button id="save_as_word">保存成word文档</button>
       </div> <!-- end of experimental_records -->
     </div> <!-- end of experiment_content -->
     <div id="experiment_sub_menu" class="ui secondary pointing menu">
