--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -1,8 +1,95 @@
-{%extends "layout.html"%}
-{%block css %}
-{%endblock css %}
-{%block content %}
- html for simulation
-{%endblock %}
-{%block script %}
-{%endblock script %}
+{% extends "layout.html" %}
+{% block css %}
+  <link rel="stylesheet" type="text/css" href="/static/css/simulation.css">
+{% endblock %}
+{% block content %}
+  <div id="simulation_wrap">
+    <div id="simulation_select">
+      <select>
+        <option>Static Performance</option>
+        <option>Dynamic Performance</option>
+        <option>Expression Efficiency</option>
+      </select>
+    </div> <!-- end of simulation_select -->
+    <div id="simulation_graph">
+      <div id="Static_Performance" class="select_item">
+        <div id="simulation_input1" class="simulation_input">
+          <h2>
+            When Input 2 is 
+            <select>
+              <option>HIGH</option>
+              <option>LOW</option>
+            </select> and constant.
+          </h2>
+          <div class="main_graph" id="graph1">
+          </div>
+        </div> <!-- end of input1 -->
+        <div id="simulation_input2" class="simulation_input">
+          <h2>
+            When Input 1 is 
+            <select>
+              <option>HIGH</option>
+              <option>LOW</option>
+            </select> and constant.
+          </h2>
+          <div class="main_graph" id="graph2">
+          </div>
+        </div> <!-- end of input2 -->
+      </div> <!-- end of Static_Serformance -->
+
+      <div id="Dynamic_Performance" class="select_item">
+        <select>
+          <option value="all">ALL</option>
+          <option value="0">input1=0, input2=0</option>
+          <option value="1">input1=1, input2=0</option>
+          <option value="2">input1=0, input2=1</option>
+          <option value="3">input1=1, input2=1</option>
+        </select>
+
+        <div class="main_graph" id="graph3">
+        </div>
+      </div> <!-- end of Dynamic_Performance -->
+
+      <div id="Expression_Efficiency" class="select_item">
+        <div id="expression_efficiency_main">
+          <div id="expression_efficiency_graph">
+            <div class="main_graph" id="graph4">
+            </div>
+          </div>
+          <div id="adjust_param">
+            <div class="adjust_param_item">
+              <h3>BBa_C0061</h3>
+              <dl>
+                <dt>PoPs</dt>
+                  <dd><input type="range" class="PoPs" min="0.00" max="1.00" step="0.10" /></dd>
+                <dt>RiPs</dt>
+                  <dd><input type="range" class="RiPs" min="0.00" max="1.00" step="0.10" /></dd>
+                <dt>copy</dt>
+                  <dd><input type="range" class="copy" min="0.00" max="1.00" step="0.10" /></dd>
+              </dl>
+            </div>
+
+            <div class="adjust_param_item">
+              <h3>BBa_C0062</h3>
+              <dl>
+                <dt>PoPs</dt>
+                  <dd><input type="range" class="PoPs" min="0.00" max="1.00" step="0.10" /></dd>
+                <dt>RiPs</dt>
+                  <dd><input type="range" class="RiPs" min="0.00" max="1.00" step="0.10" /></dd>
+                <dt>copy</dt>
+                  <dd><input type="range" class="copy" min="0.00" max="1.00" step="0.10" /></dd>
+              </dl>
+            </div>
+
+          </div>
+        </div> <!-- end of expression_efficiency_main -->
+        <div id="components_link">
+        </div>
+      </div> <!-- end of Expression_Efficiency -->
+    </div> <!-- end of simulation_graph -->
+    </div> <!-- end of simulation_wrap -->
+{% endblock %}
+{% block script %}
+  <script type="text/javascript" src="../static/javascript/ichart.1.2.min.js" ></script>
+  <script type="text/javascript" src="../static/javascript/simulation.js" ></script>
+{% endblock %}
