--- a/server/templates/experiment.html
+++ b/server/templates/experiment.html
@@ -13,19 +13,50 @@
     </div>
     <div id="header_title">
       <h1>Experiment</h1>
-    </div> 
+    </div>
+    <div id="right_header">
+      {% include "basic_operations.html" %}
+    </div>
   </div> <!-- end of experiment_header -->
 
   <div id="experiment_main">
     <div class="ui top attached tabular menu">
-      <a class="item">Experimental Procedure</a>
-      <a class="item active">Experimental Records</a>
+      <a class="item active">Experimental Procedure</a>
+      <a class="item">Experimental Records</a>
     </div>
 
     <div id="experiment_content">
-      <div id="experimental_procedure">
+      <div id="experimental_procedure" class="ui bottom attached segment">
+        <div class="ui vertical menu">
+          <div class="item">
+            <div class="ui icon input">
+              <input type="text" placeholder="搜索文章名" id="search_article_by_name" />
+              <i class="search icon"></i>
+            </div>
+          </div>
+          <!-- 由后台传上来 -->
+          <a class="item article_name">CHIP Q-PCR assay protocol.pdf</a>
+          <a class="item article_name">PCR Protocol中文版.pdf</a>
+          <a class="item article_name">PIAS3-primer design.txt</a>
+          <a class="item article_name">TET-ON-OFF.pdf</a>
+          <a class="item article_name">GSTpurification.doc</a>
+          <a class="item article_name">pentr_dtopo_map[1].pdf</a>
+          <a class="item article_name">protocol-ultracompetent cells.pdf</a>
+          <a class="item article_name">TRIzol reagent.pdf</a>
+          <a class="item article_name">In-gel hybridization Protocol.pdf</a>
+          <a class="item article_name">pENTR-D-TOPO.pdf</a>
+          <a class="item article_name">RT protocol.doc</a>
+          <a class="item article_name">virus prep protocol.pdf</a>
+          <a class="item article_name">iPS protocol-JS.pdf</a>
+          <a class="item article_name">pENTR-primer-design.doc</a>
+          <a class="item article_name">southern blot protocol.pdf</a>
+          <a class="item article_name">WesternBlot.pdf</a>
+        </div> <!-- end of ui vertical menu -->
+        <div id="show_article_content">
+          <embed src="" width="900" height="700" />
+        </div>
       </div> <!-- end of experimental_procedure -->
-      <div id="experimental_records"  class="ui bottom attached segment">
+      <div id="experimental_records">
         <div id="experimental_records_content">
           <div id="records_header">
             <div id="records_header_input">
@@ -49,34 +80,34 @@
                       <option>常用试剂</option>
                       <option>其他试剂</option>
                     </select>
-                    <input class="other_option" type="text" placeholder="其他试剂" />
-                  </div>
+                    <div class="other_option_main">
+                      <input class="other_option" type="text" placeholder="其他试剂" />
+                      <i class="triangle up icon"></i>
+                    </div>
+                  </div> <!-- end of select_option -->
                   <div class="records_unit">
                     <input type="text" placeholder="单位" />
                   </div>
                 </td>
                 <td>
-                  <input type="text" />
+                  <input class="records_input_box" type="text" />
                 </td>
                 <td>
-                  <input type="text" />
+                  <input class="records_input_box" type="text" />
                 </td>
               </tr>
             </table>
             <button type="button" id="records_add_item">+</button>
           </div> <!-- end of records_content -->
           <div id="records_note">
-            <textarea rows="8" cols="75" placeholder="note"></textarea>
+            <textarea rows="8" cols="70" placeholder="note"></textarea>
           </div>
         </div> <!-- end of experimental_records_content -->
         <button id="save_as_word">保存成word文档</button>
       </div> <!-- end of experimental_records -->
     </div> <!-- end of experiment_content -->
-    <div id="experiment_sub_menu" class="ui secondary pointing menu">
-      <a class="item active">+</a>
-    </div>
   </div> <!-- end of experiment_main -->
 {% endblock %}
 {% block script %}
-  <script type="text/javascript" src="../static/js/experiment.js"></script>
+  <script type="text/javascript" src="/static/js/experiment.js"></script>
 {% endblock %}
