--- a/server/templates/devices.html
+++ b/server/templates/devices.html
@@ -23,7 +23,7 @@
 <script src="../static/js/graphiti/util/ArrayList.js"></script>
 <script src="../static/js/graphiti/util/UUID.js"></script>
 <script src="../static/js/graphiti/geo/PositionConstants.js"></script>
-<script src="../static/js/graphiti/geo/Point.js"></script>
+<script src="../static/js/graphiti/geo/Point.js"></script>:
 <script src="../static/js/graphiti/geo/Rectangle.js"></script>
 
 <script src="../static/js/graphiti/command/CommandType.js"></script>
