--- a/server/templates/devices.html
+++ b/server/templates/devices.html
@@ -9,7 +9,7 @@
 <!-- graphiti -->
 <script src="../static/js/graphiti/lib/shifty.js"></script>
 <script src="../static/js/graphiti/lib/raphael.js"></script>
-<script src="../static/js/graphiti/lib/jquery.layout.js"></script>
+<!--script src="../static/js/graphiti/lib/jquery.layout.js"></script-->
 
 <script src="../static/js/graphiti/lib/rgbcolor.js"></script>
 <script src="../static/js/graphiti/lib/canvg.js"></script>
