devices location of part circuit

--- a/server/templates/devices.html
+++ b/server/templates/devices.html
@@ -62,6 +62,7 @@
 <script src="../static/js/graphiti/layout/locator/BottomRightLocator.js"></script>
 <script src="../static/js/graphiti/layout/locator/ContainerLocator.js"></script>
 <script src="../static/js/graphiti/layout/locator/UnbindLocator.js"></script>
+<script src="../static/js/graphiti/layout/locator/DeviceLocator.js"></script>
 
 <script src="../static/js/graphiti/Canvas.js"></script>
 <script src="../static/js/graphiti/Figure.js"></script>
