--- a/server/templates/devices.html
+++ b/server/templates/devices.html
@@ -141,4 +141,5 @@
 <script src="../static/js/graphiti/decoration/connection/TDecorator.js"></script>
 <!--custom js-->
 <script src="../static/js/devices.js"></script>
+<script src="../static/js/device-controller.js"></script>
 {%endblock script %}
