--- a/server/static/css/devices.css
+++ b/server/static/css/devices.css
@@ -1,10 +1,11 @@
 #devices {
-    height:100%;
-    width:100%;
+    height:3000px;
+    width:2000px;
     margin:0;
     padding:0;
+    overflow:auto;
 }
 
-#devices .svg {
+.main {
     overflow:auto;
 }
