--- a/server/templates/devices.html
+++ b/server/templates/devices.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="../static/css/devices.css">
 {%endblock css%}
 {%block content %}
+<div id="slider"></div>
 <div id="devices"></div>
 {%endblock content%}
 {%block script %}
