--- a/server/templates/devices.html
+++ b/server/templates/devices.html
@@ -42,6 +42,7 @@
 <script src="../static/js/graphiti/layout/connection/ConnectionRouter.js"></script>
 <script src="../static/js/graphiti/layout/connection/DirectRouter.js"></script>
 <script src="../static/js/graphiti/layout/connection/ManhattanConnectionRouter.js"></script>
+<script src="../static/js/graphiti/layout/connection/BezierConnectionRouter.js"></script>
 
 <script src="../static/js/graphiti/layout/mesh/MeshLayouter.js"></script>
 <script src="../static/js/graphiti/layout/mesh/ExplodeLayouter.js"></script>
