--- a/server/templates/devices.html
+++ b/server/templates/devices.html
@@ -4,7 +4,9 @@
 {%endblock css%}
 {%block content %}
 <div id="slider"></div>
-<div id="devices"></div>
+<div id="devices">
+    <div class="ui active dimmer"><div class="ui large text loader">Loading</div></div>
+</div>
 {%endblock content%}
 {%block script %}
 <!-- graphiti -->
