--- a/server/templates/simulation.html
+++ b/server/templates/simulation.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title %}simulation{% endblock %}
 {% block css %}
   <link rel="stylesheet" type="text/css" href="/static/css/simulation.css">
 {% endblock %}
