--- a/server/templates/layout.html
+++ b/server/templates/layout.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-<title>Biobrick Search</title>
+<title>{% block title %}{% endblock %}</title>
 
 <link rel="stylesheet" type="text/css" href="../static/css/semantic.min.css">
 <link rel="stylesheet" type="text/css" href="../static/css/main.css">
@@ -72,7 +72,6 @@
         </div>
     </form>
 <div class="operate">
-    
     <div class="main">
         {% block content %}{% endblock %}
     </div>
