--- a/server/templates/devices.html
+++ b/server/templates/devices.html
@@ -5,7 +5,7 @@
 {%block content %}
 <div id="slider"></div>
 <div id="devices">
-    <div class="ui active dimmer"><div class="ui large text loader">Loading</div></div>
+    <!--div class="ui active dimmer"><div class="ui large text loader">Loading</div></div-->
 </div>
 {%endblock content%}
 {%block script %}
