--- a/server/templates/experiment.html
+++ b/server/templates/experiment.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" style="text/css" href="../static/css/experiment.css" />
 {% endblock css %}
 {% block content %}
-  <div id="experiment_header">
+  <!--div id="experiment_header">
     <div id="left_header">
       <ul>
         <li><span><a href="/">Design</a></span></li>
@@ -15,9 +15,8 @@
       <h1>Experiment</h1>
     </div>
     <div id="right_header">
-      {% include "basic_operations.html" %}
     </div>
-  </div> <!-- end of experiment_header -->
+  </div--!> <!-- end of experiment_header -->
 
   <div id="experiment_main">
     <div class="ui top attached tabular menu">
