--- a/server/static/css/experiment.css
+++ b/server/static/css/experiment.css
@@ -46,12 +46,14 @@
 
 #experiment_main {
   width: 100%;
+  height:100%
   border: 2px gray solid;
   border-radius: 5px;
 }
 
 #experiment_content .ui.bottom.attached.segment {
   width: 100%;
+  height:100%;
 }
 
 #experimental_records_content {
