--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -108,6 +108,7 @@
                 <div class="small ui button" name="addTruthTableRow"><i class="big expand icon"></i></div>
                 <div class="ui button" name="submit">Submit</div>
                 <div class="ui button" name="frame">Design Frame</div>
+                nimei
             </div>
         </div>
     </div>
