--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -8,6 +8,12 @@
         <div id="addCircuit" class="mini ui button"><i class="big expand icon"></i></div>
     </ul>
 </div>
+<div class="ui right sidebar demo"> 
+    nimei
+</div>
+<div class="ui very tiny button" id="addBiobrik">
+    <i class="arrow large left icon"></i>
+</div>
 <div id="template">
     <div class="ui modal recommend">
         <i class="close icon"></i>
@@ -108,7 +114,6 @@
                 <div class="small ui button" name="addTruthTableRow"><i class="big expand icon"></i></div>
                 <div class="ui button" name="submit">Submit</div>
                 <div class="ui button" name="frame">Design Frame</div>
-                nimei
             </div>
         </div>
     </div>
