--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -8,11 +8,39 @@
         <div id="addCircuit" class="mini ui button"><i class="big expand icon"></i></div>
     </ul>
 </div>
-<div class="ui right sidebar demo"> 
-    nimei
-</div>
-<div class="ui very tiny button" id="addBiobrik">
-    <i class="arrow large left icon"></i>
+<div id="right-container">
+    <i class="close icon"></i> 
+    <div class="ui button trigger-right">
+    </div>
+    <div class="ui fluid accordion">
+        <div class="title">
+            <i class="dropdown icon"></i>
+            Input
+        </div>
+        <div class="content">
+            <div class="input">
+                <img class="ui small image element" name="input" src="../static/images/circuit/input.png">
+                XXXXX
+            </div>
+        </div>
+        <div class="title">
+            <i class="dropdown icon"></i>
+            Output
+        </div>
+        <div class="content">
+            <div class="output">
+                <img class="ui small image element" name="output" src="../static/images/circuit/output.png">
+                Output
+            </div>
+        </div>
+        <div class="title">
+            <i class="dropdown icon"></i>
+            nimei
+        </div>
+        <div class="content">
+            Your sister
+        </div>
+    </div>
 </div>
 <div id="template">
     <div class="ui modal recommend">
@@ -96,13 +124,13 @@
         </div>
     </div>
     <li><a></a><span class="ui-icon ui-icon-close" role="presentation">Remove Tab</span></li>
-    <div id="circuit" class="ui grid">
+    <div id="circuit" class="ui grid circuit">
         <div class="row">
             <div class="five wide column">
                 <div class="ui column divided grid">
                     <div class="row parts"></div>
                 </div>
-                <div class="small ui button" name="addPart"><i class="big expand icon"></i></div>
+                <!--div class="small ui button" name="addPart"><i class="big expand icon"></i></div-->
             </div>
             <div class="eight wide column">
                 <div class="ui column divided grid">
@@ -110,7 +138,7 @@
                 </div>
             </div>
             <div class="two wide column">
-                <div class="small ui button" name="addOutput"><i class="big expand icon"></i></div>
+                <!--div class="small ui button" name="addOutput"><i class="big expand icon"></i></div-->
                 <div class="small ui button" name="addTruthTableRow"><i class="big expand icon"></i></div>
                 <div class="ui button" name="submit">Submit</div>
                 <div class="ui button" name="frame">Design Frame</div>
