--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -18,7 +18,21 @@
             Input
         </div>
         <div class="content">
-            <div class="input">
+            <div class="ui small steps" id="chose-steps">
+                <div class="ui small step">
+                    Input
+                </div>
+                <div class="ui small step">
+                    Promoter
+                </div>
+                <div class="ui small step">
+                    Receptor
+                </div>
+                <div class="ui small step">
+                    Complete
+                </div>
+            </div>
+            <div class="input" name="input">
                 <img class="ui small image element" name="input" src="../static/images/circuit/input.png">
                 XXXXX
             </div>
@@ -28,7 +42,7 @@
             Output
         </div>
         <div class="content">
-            <div class="output">
+            <div class="output" name="output">
                 <img class="ui small image element" name="output" src="../static/images/circuit/output.png">
                 Output
             </div>
