--- a/server/templates/circuit.html
+++ b/server/templates/circuit.html
@@ -16,7 +16,7 @@
             <i class="dropdown icon"></i>
             Input
         </div>
-        <div class="content active">
+        <div class="content active" name="inputpart">
             <div class="ui small steps" id="chose-steps">
                 <div class="ui step first active" name="input">
                     Input
@@ -30,9 +30,8 @@
                 <div class="ui step fourth" name="complete">
                     Complete
                 </div>
-            </div> 
-            <div class="ui items" id="biolist">
             </div>
+            <div id="inputpart"></div>
         </div>
         <div class="title">
             <i class="dropdown icon"></i>
@@ -51,6 +50,8 @@
     </div>
 </div>
 <div id="template">
+    <div class="ui items" id="biolist">
+    </div>
     <div class="item part" name="part">
         <div class="left">
             <div class="ui segment row">
@@ -68,6 +69,10 @@
                 <img class="ui small image element" name="input" src="../static/images/circuit/input.png">
             </div>
         </div>
+    </div>
+    <div class="item biobrick">
+        <img class="ui small image element">
+        XXXXX
     </div>
     <div class="item input">
         <img class="ui small image element" name="input" src="../static/images/circuit/input.png">
